# pyavro-stardust

./: .gitignore  LICENSE  Makefile  README.md  requirements.txt  setup.cfg  setup.py
examples/: flowtuple-example.py  flowtuple4-example.py  rsdos-example.py
src/: pyavrostardust.pyx
src/pyavro_stardust/: baseavro.pxd  baseavro.pyx  flowtuple.pxd  flowtuple.pyx  flowtuple3.pxd  flowtuple3.pyx  flowtuple4.pxd  flowtuple4.pyx  rsdos.pxd  rsdos.pyx
