[metadata]
name = pyavro-stardust
version = 1.0.0
description = Package for efficient processing of STARDUST Avro data files
long_description = file: README.md
long_description_content_type = text/markdown
author = Shane Alcock
author_email = shane@alcock.co.nz
url = https://github.com/CAIDA
project_urls =
	Code = https://github.com/CAIDA
	Issue tracker = https://github.com/CAIDA
classifiers =
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.4
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h
cypack = data/*
